maze.lessons.maze.wallfindfollow.WallFindFollowMaze.scala.error
Escaper:4: error: value unary_! is not a member of plm.universe.Direction
while ( (!getDirection()==direction.WEST) && (!estFaceMur()) )
         ^