maze.lessons.maze.wallfindfollow.WallFindFollowMaze.scala.code
def keepHandsOnSideWall()
			{
while ( (!getDirection()==direction.WEST) && (!estFaceMur()) )
{
gauche();
avance();
}
while(!estSurBiscuit)
{
gauche();
if (!estFaceMur)
	{
	droite();
	avance();
	
	}
if (estFaceMur)
{
	droite();
	
}
}
			}
keepHandsOnSideWall();		
